--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div id="vis"></div>
 
 <script type="text/javascript">
-  var spec = "https://github.com/poojakayyalathodi/FIT3179.github.io/blob/master/visualization.vl.json";
+  var spec = "https://github.com/poojakayyalathodi/FIT3179.github.io/blob/master/visualization.vg.json";
   vegaEmbed('#vis', spec).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
