--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
   </div> <!-- end page -->
    
 <script type="text/javascript">
-  var specVis1 = "js/mismanaged.vg.json";
+  var specVis1 = "js/world.json";
   var specVis2= "js/mismanaged.vg.json";
   var specVis3 = "js/micro.vg.json";
   var specVis4= "js/ macro.vg.json";
-  var specVis5 = "js/mismanaged.vg.json";
+  var specVis5 = "js/epf.vg.json";
   var specVis6= "js/visualization.vg.json";
 
   vegaEmbed('#vis1', specVis1, {"actions": false}).then(function(result) {
