--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Multiple Visualisations | An Example</title>
+  <title>Plastic Waste Management</title>
   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@4"></script>
@@ -109,21 +109,17 @@
     <!-- end pure grid group -->
 
      <!-- pure grid group -->
-     <div class="pure-g">
+    <div class="pure-g">
+        <div class="pure-u-2-3">
+          <div id="vis5"  class="vis-container"></div>
+        </div>
         <div class="pure-u-1-3">
-          <div class="description description-left">
-            <h2>This is the third section</h2>
-            <p>Using all three columns without merging. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
+          <div class="description description-right">
+            <h2>This is the fourth section</h2>
+            <p>Similar to the previous section, but the colum partition is swapped. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. Egestas purus viverra accumsan in nisl.</p>
           </div>
         </div>
-        <div class="pure-u-1-3">
-          <div id="vis4"  class="vis-container"></div>
-        </div>
-        <div class="pure-u-1-3">
-          <div id="vis3"  class="vis-container"></div>
-        </div>
-      
-      </div>
+    </div>
     <!-- end pure grid group -->
   
     <div class="pure-g">
@@ -156,6 +152,9 @@
   }).catch(console.error);
 
   vegaEmbed('#vis4', specVis4, {"actions": false}).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+   vegaEmbed('#vis5', specVis5, {"actions": false}).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
