--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
              <p>
                 Macroplastics are bouyant plastic materials that are greater than 0.5 cm in diameter. The chart on the right shows the prediction from 2019 to 2050 for differenent emission scenarios. 
                <br><br>
-               Unlike, microplastics amount of macroplastics  in the oceans reduces by<b style="font-size: 20px; color:#5ca08e;"> 54%</b> , compared to the amount of macroplastics in the ocean in 2020. 
+               Unlike, microplastics amount of macroplastics  in the oceans reduces by<b style="font-size: 20px; color:#5ca08e;"> 54%</b> , compared to the amount of macroplastics in the ocean in 2020.
+               <br><br>
+               <a href="		https://www.nature.com/articles/s41598-019-49413-5" style="font-size: 12px;">Source: 	https://www.nature.com/articles/s41598-019-49413-5</a>
               </p>
             </div>
           </div>
@@ -296,7 +298,9 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 
- 
+  vegaEmbed('#vis7', specVis7, { "actions": false }).then(function (result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
 
 
 
