--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="pure-g">
           <div class="pure-u-9-24">
             <div class="description description-left">
-              <h2>Microplastics and Macroplastics in Surface Ocean based on emission trends<br>(1950-2050)</h2>
+              <h2>Microplastics in Surface Ocean based on emission trends<br>(1950-2050)</h2>
               <p>
                Microplastics are bouyant plastic materials that are smaller than 0.5 cm in diameter.The chart on the right shows the prediction from 2019 to 2050 for differenent emission scenarios.
                 <br><br>
